# AdventOfCode

2020/Day2/: day2.cpp
2020/Day3/: day3.py
2020/Day4/: Program.cs
2021/Day1/: day1.py
2021/Day2/: day2.py
2022/: README.md
2022/Day1/: day1.py
2022/Day2/: day2.py
2022/Day3/: day3.py
2022/Day4/: day4.py
2022/Day5/: day5.py
2023/day1/: day1.py
2024/: Cargo.toml  README
2024/src/: lib.rs
