[package]
name = "adv-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
code-timing-macros = { version = "0.0.6", features = ["release"] }
const_format = "0.2.33"

# Additional recommended dependencies
itertools = "0.14.0"
regex = "1.11.1"
smallvec = { version = "1.11" }
